Use KGuiAddons::KSystemClipboard to better handle wayland

Allow klipper to read image data from clipboard

BUG: 442923